cocogen/tests/fail/invalid_node_lifetime.ccn

start phase hello {
    actions {
        pass p;
        phase1;
    }
};

root node ast {
    attributes {
        ast next
    },

    lifetime {
        mandatory
    }
};

phase phase1 {
    actions {
        pass doSomething;
    } 
};
